--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingBottom="16dp"
-    android:paddingTop="16dp"
+    android:paddingBottom="3dp"
+    android:paddingTop="3dp"
     android:screenOrientation="landscape" >
 
+    <Button
+        android:id="@+id/square1Button"
+        android:layout_width="300dp"
+        android:layout_height="219dp"
+        android:gravity="center"
+        android:background="@color/colorDarkBlue"
+        android:textSize="450px"
+        />
+        <Button
+        android:id="@+id/square2Button"
+        android:layout_width="300dp"
+        android:layout_height="219dp"
+        android:gravity="center"
+        android:background="@color/colorRed"
+        android:layout_alignParentRight="true"
+        android:textSize="450px" />
     <TextView
         android:id="@+id/team1Title"
         android:layout_width="290dp"
@@ -16,50 +32,148 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textSize="46px"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:elevation="2dp"
+        android:textSize="76px"
         android:text="Team A" />
-
     <TextView
         android:id="@+id/team2Title"
         android:layout_width="290dp"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
+        android:elevation="2dp"
+        android:textStyle="bold"
         android:gravity="right"
-        android:textSize="46px"
+        android:textSize="76px"
         android:text="Team B" />
-
     <Button
-        android:id="@+id/addButton"
-        android:layout_width="290dp"
+        android:id="@+id/score1Button"
+        android:layout_width="230dp"
         android:layout_height="184dp"
         android:layout_below="@+id/team1Title"
-        android:textSize="96px"
-        android:text="0" />
+        android:background="@drawable/white_button"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="450px" />
 
     <Button
-        android:id="@+id/substractButton"
-        android:layout_width="290dp"
+        android:id="@+id/set1Button"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/team1Title"
+        android:layout_toRightOf="@+id/score1Button"
+        android:background="@drawable/white_button"
+        android:textSize="160px"
+        android:text="0" />
+
+
+    <Button
+        android:id="@+id/score2Button"
+        android:layout_width="230dp"
         android:layout_height="184dp"
         android:layout_below="@+id/team2Title"
         android:layout_alignParentRight="true"
-        android:textSize="96px"
+        android:background="@drawable/white_button"
+        android:textSize="450px"
         android:text="0"
         />
+    <Button
+        android:id="@+id/set2Button"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_below="@+id/team1Title"
+        android:layout_toLeftOf="@+id/score2Button"
+        android:textSize="160px"
+        android:background="@drawable/white_button"
+        android:text="0" />
+
+    <ImageButton
+        android:id="@+id/TO1_1Button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/score1Button"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:padding="5dp"
+        android:src="@mipmap/time_out"/>
+
+    <ImageButton
+        android:id="@+id/TO1_2Button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/score1Button"
+        android:layout_toEndOf="@+id/TO1_1Button"
+        android:layout_toRightOf="@+id/TO1_1Button"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:padding="5dp"
+        android:src="@mipmap/time_out" />
+
+    <ImageButton
+        android:id="@+id/TO2_1Button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/score2Button"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:padding="5dp"
+        android:src="@mipmap/time_out" />
+
+    <ImageButton
+        android:id="@+id/TO2_2Button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/score2Button"
+        android:layout_toLeftOf="@+id/TO2_1Button"
+        android:layout_toStartOf="@+id/TO2_1Button"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:padding="5dp"
+        android:src="@mipmap/time_out" />
+
+    <Button
+        android:id="@+id/menuButton"
+        android:layout_width="180dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:text="Menu"/>
 
     <Button
         android:id="@+id/resetButton"
-        android:layout_width="291dp"
-        android:layout_height="80dp"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
         android:layout_alignParentBottom="true"
-        android:text="Reset" />
+        android:layout_toRightOf="@+id/menuButton"
+        android:text="@string/resetButton" />
+
+    <Button
+        android:id="@+id/switchButton"
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/undoButton"
+        android:text="switch teams" />
 
     <Button
         android:id="@+id/undoButton"
-        android:layout_width="291dp"
-        android:layout_height="80dp"
+        android:layout_width="180dp"
+        android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:text="Undo" />
+
+    <TextView
+        android:id="@+id/TOView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/score1Button"
+        android:layout_centerHorizontal="true"
+        android:textSize="120px"
+        android:text="" />
+
 
 </RelativeLayout>
 
